# wgpu-app

./: Cargo.toml  build.rs
res/: floortile.mtl  wallcube.mtl
src/: camera.rs  camera_controller.rs  camera_uniform.rs  collision_detection.rs  cube.rs  floor.rs  instance.rs  main.rs  model.rs  resources.rs  shader.wgsl  slope.rs  sprite.rs  systems.rs  texture.rs  vertex.rs
