[package]
name = "wgpu-app"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
cgmath = "0.18"
winit = "0.27"
env_logger = "0.9"
log = "0.4"
pollster = "0.2"
wgpu = "0.13"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
tobj = { version = "3.2.1", features = [
    "async",
]}
instant = "0.1"


[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
